--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>Bolt - Coming Soon Template</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" >
     <!-- Fonts -->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
+    <link rel="stylesheet" type="text/css" href="/fonts/line-icons.css">
     <!-- Slicknav -->
-    <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css">
+    <link rel="stylesheet" type="text/css" href="/css/slicknav.css">
     <!-- Off Canvas Menu -->
-    <link rel="stylesheet" type="text/css" href="assets/css/menu_sideslide.css">
+    <link rel="stylesheet" type="text/css" href="/css/menu_sideslide.css">
     <!-- Color Switcher -->
-    <link rel="stylesheet" type="text/css" href="assets/css/vegas.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/vegas.min.css">
     <!-- Animate -->
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="/css/animate.css">
     <!-- Main Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <!-- Responsive Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/responsive.css">
 
   </head>
   <body>
@@ -37,7 +37,7 @@
         <div class="row text-center">
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="heading-count">
-              <h2>WE ARE LAUNCHING IN</h2>
+              <h2>STK WORKS</h2>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
@@ -45,8 +45,8 @@
               <div id="clock" class="time-count"></div>
             </div>
             <p>
-            Bolt - High quality Bootstrap HTML5 Coming Soon Landing Page Template<br>
-            Comes with fully responsive layout, Cool features, and Clean design.
+            <!-- Bolt - High quality Bootstrap HTML5 Coming Soon Landing Page Template<br>
+            Comes with fully responsive layout, Cool features, and Clean design. -->
             </p>
             <div class="button-group">
               <a href="#" class="btn btn-common">Notify Me</a>
@@ -71,19 +71,19 @@
     <!-- End Preloader -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/vegas.min.js"></script>
-    <script src="assets/js/jquery.countdown.min.js"></script>
-    <script src="assets/js/classie.js"></script>
-    <script src="assets/js/jquery.nav.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script> 
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
+    <script src="/js/jquery-min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/vegas.min.js"></script>
+    <script src="/js/jquery.countdown.min.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/jquery.nav.js"></script>
+    <script src="/js/jquery.easing.min.js"></script> 
+    <script src="/js/wow.js"></script>
+    <script src="/js/jquery.slicknav.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/form-validator.min.js"></script>
+    <script src="/js/contact-form-script.min.js"></script>
 
     <script type="text/javascript">
       $("#example").vegas({
@@ -92,9 +92,9 @@
           transitionDuration: 2000,
           transition: "blur",
           slides: [
-              { src: "assets/img/slide1.jpg" },
-              { src: "assets/img/slide2.jpg" },
-              { src: "assets/img/slide3.jpg" }
+              { src: "/img/slide1.jpg" },
+              { src: "/img/slide2.jpg" },
+              { src: "/img/slide3.jpg" }
           ]
       });
     </script>
