--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
           </div>
         </div>
       </div>
+      <p>Copyright © 2022 | Crafted by DVH</p>
     </section>
     <!-- Coundown Section End -->
-
+   
     <!-- Preloader -->
     <div id="preloader">
       <div class="loader" id="loader-1"></div>
