--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div id="clock" class="time-count"></div>
             </div>
             <p>
-              COMING SOON
+              UNDER CONSTRUCTION
             </p>
             <div class="button-group">
               <a href="#" class="btn btn-common">Notify Me</a>
